[package]
name = "egui_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
crossbeam-channel = "0.5.6"
egui = { version = "0.20.1", default-features = false }
parking_lot = "0.12.1"
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["registry"] }

[dev-dependencies]
eframe = "0.20.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
